# onboardai

./: .gitignore  CONTRIBUTING.md  README.md  package.json
backend/: README.md  dockerfile  mess.txt  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/config/: env_config.py  pydantic_models.py  slack_client.py
backend/src/data/: schema.sql
backend/src/servers/: database_server.py  database_tools.py  kb_vector_tools.py
backend/src/services/: autogen_manager.py  fastapi.py  openai_agents.py  workflow_graph.py
