[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.4",
    "autogen-ext>=0.7.4",
    "crewai>=0.186.1",
    "fastapi>=0.116.2",
    "google-generativeai>=0.8.5",
    "langgraph>=0.6.7",
    "mcp>=1.15.0",
    "openai-agents>=0.3.2",
    "python-multipart>=0.0.20",
    "slack-sdk>=3.36.0",
    "uvicorn>=0.35.0",
]
